static/style.css
:root {
  --justify-important: left;
  --justify-normal: left;
  --color-error: #F44336;
  --color-link-light: #2BA5FF;
}

body {
  max-width: var(--width-content);
  margin: 0 auto;
  padding: 0 1em;
}

nav {
  margin-bottom: 0;
}

nav a {
  text-decoration: none !important;
}

header, footer, main {
  padding: 0;
}

div.highlight {
  background: none !important;
}

#links, #backlinks, #neighbors, #updates {
  display: block;
}

a.broken {
  color: var(--color-error) !important;
}

/*
span.broken {
  color: var(--color-link-light);
}
*/

figcaption a {
  color: inherit;
  text-decoration: underline;
  font-weight: normal;
}

small a {
  color: var(--color-text-secondary);
  text-decoration: none;
  font-weight: normal;
}

article blockquote {
  background-color: var(--color-accent);
  border-radius: var(--border-radius);
  max-width: none;
  padding: 0.1rem 1rem;
  font-size: inherit;
}

pre {
  max-width: 100%;
}

pre code {
  max-width: 100%;
  padding: 1rem;
  margin: 0.5em 0;
  overflow-x: auto;
  overflow-y: hidden;
}

article pre {
  padding: 0;
  margin: 0;
}

/*
article code {
  padding: 1rem;
}
*/

article p code {
  padding: 0;
}

hr {
  margin: 2rem 0;
}

blockquote ul {
  margin-left: 1rem;
  padding: 0;
}

article a {
  font-weight: normal;
}

